# teledrive

./: .gitignore  .pre-commit-config.yaml  README.md  anon.session  pyproject.toml  requirements.txt
src/: abstract.py  cli.py  client.py  constants.py  database.py  download.py  exceptions.py  files.py  init.py  logger.py  main.py  main_bk.py  models.py  settings.py  teledrive.py  test.py  upload.py  utils.py  windows.py
src/utils/: __init__.py  data.py  files.py  pyside.py
src/views/: __init__.py  first.py  main.py
src/widgets/: __init__.py  dialogs.py
